# hse

./: .gitignore  Dockerfile  README.md  all_features.csv  backup_db.sh  docker-compose.yml  mygit.pub  pyproject.toml  script_parse_tinkoff_api.ipynb  t_pulse_parsing.ipynb  t_puse_parsing.ipynb  train_val_test_ml_models.ipynb
EDA/cbrf/: cbrf_eda.ipynb
EDA/eda_moex_dividends/: eda_moex_dividends.ipynb
EDA/eda_moex_indices/: eda_moex_indices.ipynb
EDA/eda_t-pulse/: eda_t-pulse.ipynb
EDA/tinkoff_api/: Untitled.ipynb  comprehensive_stock_analysis.csv  stock_statistics.csv  tinkoff_api.ipynb
automatization/: Dockerfile  parse_tpulse_daily.py
ml/: pyproject.toml
ml/tinkoff_api/: tinkoff_api.ipynb
moex_iss_currency/: moex_iss_currency.ipynb
moex_iss_dividends/: moex_iss_dividends.py
moex_iss_indices/: Dockerfile  docker-compose.yaml  moex_iss_indices.ipynb  moex_iss_indices.py
notebooks/cbrf/: cbrf_data.ipynb
notebooks/moex_iss_dividends/: moex_iss_dividends.ipynb  requirements.txt
notebooks/moex_iss_indices/: moex_iss_indices.ipynb  moex_iss_indices.py
notebooks/t-pulse/: preprocessing.ipynb
notebooks/t-pulse/parsing/: t_pulse.ipynb
notebooks/tinkoff/: func-ticker-tinkoff.ipynb  tinkoff_ stock.ipynb
parsing/: t_pulse.ipynb
scripts/cbrf/: cbrf_data.py
scripts/moex_iss_dividends/: moex_iss_dividends.py
scripts/moex_iss_indices/: moex_iss_indices.py
scripts/t-pulse/automatization/: parse_tpulse_daily.py  requirements.txt  tickers.txt
scripts/tinkoff/: script.py  tinkoff_stock.py
utils/: config_ml.py  get_data_ticker_tinkoff.py  utils.py
