[project]
name = "russian-stocks-prediction-ml-dl"
version = "0.1.0"
description = "Russian stocks prediction using Machine Learning and Deep Learning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Основные и данные
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # API и базы данных
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "tinkoff-investments>=0.2.0b117",
    "tpulse>=0.1.9",
    "psycopg[binary]>=3.1.0",
    
    # Визуализация
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    
    # Классическое ML (только CPU-совместимые)
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    
    # MLOps
    "mlflow>=2.8.0",
    
    # Утилиты
    "tqdm>=4.65.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
