[project]
name = "russian-stocks-prediction-ml-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "pandas>=1.5.0",
    "requests>=2.28",
    "sqlalchemy>=2.0.44",
    "tinkoff-investments>=0.2.0b117",
    "SQLAlchemy>=1.4",
    "tpulse>=0.1.9",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "plotly>=6.4.0",
    "scikit-learn>=1.2.2",
    "statsmodels>=0.14.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "psycopg2-binary>=2.9.11",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.0.0",
    "stockstats>=0.6.5",
    "spacy>=3.8.11",
    "nltk>=3.9.2",
    "ru-core-news-sm",
    "razdel>=0.5.0",
    "optuna>=4.6.0",
    "xgboost>=3.1.2",
    "lightgbm>=4.6.0",
    "catboost>=1.2.8",
]

[tool.uv.sources]
russian-stocks-prediction-ml-dl = { path = ".", editable = true }
ru-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
